[project]
name = "my-agent"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "langgraph>=0.2",
    "langgraph-supervisor>=0.0.5",
    "langchain>=0.3",
    "langchain-aws>=0.2",
    "langchain-community>=0.3",
    "boto3>=1.35",
    "pydantic>=2.0",
    "jmespath>=1.0",
    "celpy>=0.1.5",
    "httpx>=0.27",
    "bedrock-agentcore>=0.1",
    "langchain-mcp-adapters>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "moto[all]>=5.0",
    "responses>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "tools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
